cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

executable aoc2023
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010

  ghc-options:
    -Wall

  default-extensions:
    OverloadedStrings

  other-modules:
    Day01
    Day02

  build-depends:
      base ^>=4.17.2.0
      , text ^>=2.1